--- a/tegel/src/components/textarea/textarea.scss
+++ b/tegel/src/components/textarea/textarea.scss
@@ -279,6 +279,7 @@
   position: absolute;
   right: 18px;
   top: 18px;
+  color: var(--sdds-textarea-icon-read-only-color);
 
   &-label {
     display: none;
